--- a/虚拟机操作手册.md
+++ b/虚拟机操作手册.md
@@ -1,12 +1,8 @@
 # 虚拟机操作手册
 
-[TOC]
-
-
-
-
-
 # Cent OS 7常用命令
+
+
 
 ## 系统命令
 
@@ -317,9 +313,9 @@ echo -n  " " > catalina.out
    并在后面添加如下内容(以下内容根据自己网络情况配置)
 
    ```sh
-   IPADDR=192.168.220.129
-   NETMARSK=255.255.255.0
-   GATEWAY=192.168.220.2
+   IPADDR=192.168.131.130
+   NETMASK=255.255.255.0
+   GATEWAY=192.168.131.255
    DNS1=114.114.114.114
    DNS2=8.8.8.8 
    ```
@@ -522,10 +518,274 @@ echo -n  " " > catalina.out
   ```sh
 systemctl restart sshd
 systemctl restart firewalld.service
+reb
 shutdown -r now
   ```
 
 8. 重新ssh连接测试
+
+
+
+## 新增硬盘扩容至根目录
+
+1.  查看分区状况
+
+    ```sh
+    [root@localhost ~]# df -h
+    文件系统                 容量  已用  可用 已用% 挂载点
+    /dev/mapper/centos-root  100G  5.0G   96G    5% /
+    devtmpfs                  16G     0   16G    0% /dev
+    tmpfs                     16G     0   16G    0% /dev/shm
+    tmpfs                     16G   97M   16G    1% /run
+    tmpfs                     16G     0   16G    0% /sys/fs/cgroup
+    /dev/vda1               1014M  208M  807M   21% /boot
+    /dev/mapper/centos-home   92G   37M   92G    1% /home
+    tmpfs                    3.2G   32K  3.2G    1% /run/user/0
+    ```
+
+    根目录为`/dev/mapper/centos-root`
+
+    ```shell
+    [root@localhost ~]# lsblk
+    NAME            MAJ:MIN RM  SIZE RO TYPE MOUNTPOINT
+    sr0              11:0    1  422K  0 rom  
+    vda             252:0    0  200G  0 disk 
+    ├─vda1          252:1    0    1G  0 part /boot
+    └─vda2          252:2    0  199G  0 part 
+      ├─centos-root 253:0    0  100G  0 lvm  /
+      ├─centos-swap 253:1    0  7.9G  0 lvm  [SWAP]
+      └─centos-home 253:2    0 91.1G  0 lvm  /home
+    vdb             252:16   0  200G  0 disk
+    ```
+
+2.  新建分区，并将id改为8e
+
+    ```shell
+    [root@localhost ~]# fdisk /dev/vdb
+    欢迎使用 fdisk (util-linux 2.23.2)。
+    
+    更改将停留在内存中，直到您决定将更改写入磁盘。
+    使用写入命令前请三思。
+    
+    Device does not contain a recognized partition table
+    使用磁盘标识符 0x227b5082 创建新的 DOS 磁盘标签。
+    
+    命令(输入 m 获取帮助)：n
+    Partition type:
+       p   primary (0 primary, 0 extended, 4 free)
+       e   extended
+    Select (default p): p
+    分区号 (1-4，默认 1)：
+    起始 扇区 (2048-419430399，默认为 2048)：
+    将使用默认值 2048
+    Last 扇区, +扇区 or +size{K,M,G} (2048-419430399，默认为 419430399)：
+    将使用默认值 419430399
+    分区 1 已设置为 Linux 类型，大小设为 200 GiB
+    
+    命令(输入 m 获取帮助)：t
+    已选择分区 1
+    Hex 代码(输入 L 列出所有代码)：l
+    
+     0  空              24  NEC DOS         81  Minix / 旧 Linu bf  Solaris        
+     1  FAT12           27  隐藏的 NTFS Win 82  Linux 交换 / So c1  DRDOS/sec (FAT-
+     2  XENIX root      39  Plan 9          83  Linux           c4  DRDOS/sec (FAT-
+     3  XENIX usr       3c  PartitionMagic  84  OS/2 隐藏的 C:  c6  DRDOS/sec (FAT-
+     4  FAT16 <32M      40  Venix 80286     85  Linux 扩展      c7  Syrinx         
+     5  扩展            41  PPC PReP Boot   86  NTFS 卷集       da  非文件系统数据 
+     6  FAT16           42  SFS             87  NTFS 卷集       db  CP/M / CTOS / .
+     7  HPFS/NTFS/exFAT 4d  QNX4.x          88  Linux 纯文本    de  Dell 工具      
+     8  AIX             4e  QNX4.x 第2部分  8e  Linux LVM       df  BootIt         
+     9  AIX 可启动      4f  QNX4.x 第3部分  93  Amoeba          e1  DOS 访问       
+     a  OS/2 启动管理器 50  OnTrack DM      94  Amoeba BBT      e3  DOS R/O        
+     b  W95 FAT32       51  OnTrack DM6 Aux 9f  BSD/OS          e4  SpeedStor      
+     c  W95 FAT32 (LBA) 52  CP/M            a0  IBM Thinkpad 休 eb  BeOS fs        
+     e  W95 FAT16 (LBA) 53  OnTrack DM6 Aux a5  FreeBSD         ee  GPT            
+     f  W95 扩展 (LBA)  54  OnTrackDM6      a6  OpenBSD         ef  EFI (FAT-12/16/
+    10  OPUS            55  EZ-Drive        a7  NeXTSTEP        f0  Linux/PA-RISC  
+    11  隐藏的 FAT12    56  Golden Bow      a8  Darwin UFS      f1  SpeedStor      
+    12  Compaq 诊断     5c  Priam Edisk     a9  NetBSD          f4  SpeedStor      
+    14  隐藏的 FAT16 <3 61  SpeedStor       ab  Darwin 启动     f2  DOS 次要       
+    16  隐藏的 FAT16    63  GNU HURD or Sys af  HFS / HFS+      fb  VMware VMFS    
+    17  隐藏的 HPFS/NTF 64  Novell Netware  b7  BSDI fs         fc  VMware VMKCORE 
+    18  AST 智能睡眠    65  Novell Netware  b8  BSDI swap       fd  Linux raid 自动
+    1b  隐藏的 W95 FAT3 70  DiskSecure 多启 bb  Boot Wizard 隐  fe  LANstep        
+    1c  隐藏的 W95 FAT3 75  PC/IX           be  Solaris 启动    ff  BBT            
+    1e  隐藏的 W95 FAT1 80  旧 Minix       
+    Hex 代码(输入 L 列出所有代码)：8e
+    已将分区“Linux”的类型更改为“Linux LVM”
+    
+    命令(输入 m 获取帮助)：w
+    The partition table has been altered!
+    
+    Calling ioctl() to re-read partition table.
+    正在同步磁盘。
+    
+    ```
+
+3.  刷新并查看sdb1是否存在
+
+    ```shell
+    [root@localhost ~]# partprobe
+    [root@localhost ~]# lsblk
+    NAME            MAJ:MIN RM  SIZE RO TYPE MOUNTPOINT
+    sr0              11:0    1  422K  0 rom  
+    vda             252:0    0  200G  0 disk 
+    ├─vda1          252:1    0    1G  0 part /boot
+    └─vda2          252:2    0  199G  0 part 
+      ├─centos-root 253:0    0  100G  0 lvm  /
+      ├─centos-swap 253:1    0  7.9G  0 lvm  [SWAP]
+      └─centos-home 253:2    0 91.1G  0 lvm  /home
+    vdb             252:16   0  200G  0 disk 
+    └─vdb1          252:17   0  200G  0 part 
+    ```
+
+4.  使用lvm命令新建卷/dev/vdb1,并将其加载到卷组centos中
+
+    ```shell
+    [root@localhost ~]# lvm
+    lvm> pvcreate /dev/vdb1
+      Physical volume "/dev/vdb1" successfully created.
+    lvm> pvdisplay
+      --- Physical volume ---
+      PV Name               /dev/vda2
+      VG Name               centos
+      PV Size               <199.00 GiB / not usable 3.00 MiB
+      Allocatable           yes 
+      PE Size               4.00 MiB
+      Total PE              50943
+      Free PE               1
+      Allocated PE          50942
+      PV UUID               C4fWly-FXW2-0YNu-sCiK-96RD-yyfJ-TdmKn9
+       
+      "/dev/vdb1" is a new physical volume of "<200.00 GiB"
+      --- NEW Physical volume ---
+      PV Name               /dev/vdb1
+      VG Name               
+      PV Size               <200.00 GiB
+      Allocatable           NO
+      PE Size               0   
+      Total PE              0
+      Free PE               0
+      Allocated PE          0
+      PV UUID               sQkrz3-twIl-IXZk-k2xV-8C5c-bAKf-syXCRD
+       
+    lvm> vgdisplay
+      --- Volume group ---
+      VG Name               centos
+      System ID             
+      Format                lvm2
+      Metadata Areas        1
+      Metadata Sequence No  4
+      VG Access             read/write
+      VG Status             resizable
+      MAX LV                0
+      Cur LV                3
+      Open LV               3
+      Max PV                0
+      Cur PV                1
+      Act PV                1
+      VG Size               <199.00 GiB
+      PE Size               4.00 MiB
+      Total PE              50943
+      Alloc PE / Size       50942 / 198.99 GiB
+      Free  PE / Size       1 / 4.00 MiB
+      VG UUID               p6KwrN-dHe7-5tT0-6lo9-mOPO-qtUh-jHthEp
+       
+    lvm> vgextend centos /dev/vdb1
+      Volume group "centos" successfully extended
+    lvm> vgdisplay
+      --- Volume group ---
+      VG Name               centos
+      System ID             
+      Format                lvm2
+      Metadata Areas        2
+      Metadata Sequence No  5
+      VG Access             read/write
+      VG Status             resizable
+      MAX LV                0
+      Cur LV                3
+      Open LV               3
+      Max PV                0
+      Cur PV                2
+      Act PV                2
+      VG Size               398.99 GiB
+      PE Size               4.00 MiB
+      Total PE              102142
+      Alloc PE / Size       50942 / 198.99 GiB
+      Free  PE / Size       51200 / 200.00 GiB
+      VG UUID               p6KwrN-dHe7-5tT0-6lo9-mOPO-qtUh-jHthEp
+       
+    lvm> lvextend -l +100%FREE /dev/centos/root
+      Size of logical volume centos/root changed from 100.00 GiB (25600 extents) to 300.00 GiB (76800 extents).
+      Logical volume centos/root successfully resized.
+    lvm> exit
+      Exiting.
+    ```
+
+    这里的/dev/centos/root不能随便改成centos-root。LVM逻辑卷管理，根文件系统建立在卷组（VG）centos上的逻辑卷（LV）上，逻辑卷名是root而不是直接建在硬盘分区上
+
+5.  之前只是对逻辑卷扩容，还要同步到文件系统，实现对根目录的扩容
+
+    ```shell
+    [root@localhost ~]#  xfs_growfs /dev/centos/root
+    meta-data=/dev/mapper/centos-root isize=512    agcount=4, agsize=6553600 blks
+             =                       sectsz=512   attr=2, projid32bit=1
+             =                       crc=1        finobt=0 spinodes=0
+    data     =                       bsize=4096   blocks=26214400, imaxpct=25
+             =                       sunit=0      swidth=0 blks
+    naming   =version 2              bsize=4096   ascii-ci=0 ftype=1
+    log      =internal               bsize=4096   blocks=12800, version=2
+             =                       sectsz=512   sunit=0 blks, lazy-count=1
+    realtime =none                   extsz=4096   blocks=0, rtextents=0
+    data blocks changed from 26214400 to 78643200
+    
+    [root@localhost ~]# df -h
+    文件系统                 容量  已用  可用 已用% 挂载点
+    /dev/mapper/centos-root  300G  5.0G  296G    2% /
+    devtmpfs                  16G     0   16G    0% /dev
+    tmpfs                     16G     0   16G    0% /dev/shm
+    tmpfs                     16G   97M   16G    1% /run
+    tmpfs                     16G     0   16G    0% /sys/fs/cgroup
+    /dev/vda1               1014M  208M  807M   21% /boot
+    /dev/mapper/centos-home   92G   37M   92G    1% /home
+    tmpfs                    3.2G   32K  3.2G    1% /run/user/0
+    ```
+
+6.  检查对比
+
+    以下为扩容前后文件系统详情
+
+    ```shell
+    [root@localhost ~]# df -h
+    文件系统                 容量  已用  可用 已用% 挂载点
+    /dev/mapper/centos-root  100G  5.0G   96G    5% /
+    devtmpfs                  16G     0   16G    0% /dev
+    tmpfs                     16G     0   16G    0% /dev/shm
+    tmpfs                     16G   97M   16G    1% /run
+    tmpfs                     16G     0   16G    0% /sys/fs/cgroup
+    /dev/vda1               1014M  208M  807M   21% /boot
+    /dev/mapper/centos-home   92G   37M   92G    1% /home
+    tmpfs                    3.2G   32K  3.2G    1% /run/user/0
+    
+    [root@localhost ~]# df -h
+    文件系统                 容量  已用  可用 已用% 挂载点
+    /dev/mapper/centos-root  300G  5.0G  296G    2% /
+    devtmpfs                  16G     0   16G    0% /dev
+    tmpfs                     16G     0   16G    0% /dev/shm
+    tmpfs                     16G   97M   16G    1% /run
+    tmpfs                     16G     0   16G    0% /sys/fs/cgroup
+    /dev/vda1               1014M  208M  807M   21% /boot
+    /dev/mapper/centos-home   92G   37M   92G    1% /home
+    tmpfs                    3.2G   32K  3.2G    1% /run/user/0
+    ```
+
+    根目录容量已从100G扩容至300G
+
+    
+
+
+
+
 
 # CentOS 7 常用软件安装
 
@@ -584,7 +844,7 @@ nohup cmds >/dev/null 2>&1 &    |无任何输出或log，在后台运行一个cm
    sudo yum -y upgrade
    ```
 
-## 安装Aapache:
+## 安装Apache:
 
 ```sh
 # 安装
@@ -645,7 +905,9 @@ systemctl restart firewalld.service
 
    - 官网下载
 
-     > 官网地址：[https://dev.mysql.com/downloads/mysql](https://links.jianshu.com/go?to=https%3A%2F%2Fdev.mysql.com%2Fdownloads%2Fmysql)
+     > 官网地址：
+     >
+     > [MySQL :: Download MySQL Community Server](https://dev.mysql.com/downloads/mysql/)
      >
      > <img src="img/虚拟机操作手册/image-20221125100658139.png" alt="image-20221125100658139" style="zoom: 40%;" />
 
